--- a/src/components/Package/Package.css
+++ b/src/components/Package/Package.css
@@ -1,15 +1,14 @@
 .package {
-    height: 480px;
-    border-radius: 5px;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
-      rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
-  }
-  .package:hover {
-    /* background-color: rgb(238, 236, 236); */
-    background-color: rgba(27, 163, 247, 0.24);
-  }
-  .package img {
-    height: 220px;
-    border-radius: 5px;
-  }
-  
+  /* height: 480px; */
+  border-radius: 5px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+}
+.package:hover {
+  /* background-color: rgb(238, 236, 236); */
+  background-color: rgba(27, 163, 247, 0.24);
+}
+.package img {
+  height: 220px;
+  border-radius: 5px;
+}
